# opendroneid-core-c

./: CMakeLists.txt
